Update startup script